--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 Assets/PlayerPrefsEditor/CHANGELOG.md
 Assets/PlayerPrefsEditor/
 Assets/PlayerPrefsEditor.meta
+.utmp/
